--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle1.png" alt="1">
+                            <img src="./icons/Rectangle1.png" alt="1">
                         </div>
                         <div>
                             <div class="blu">Никаких наличных, оплата происходит автоматически</div>
@@ -95,7 +95,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle.png" alt="2">
+                            <img src="./icons/Rectangle.png" alt="2">
                         </div>
                         <div>
                             <div class="blu">Высокий доход с гарантированными выплатами</div>
@@ -109,7 +109,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle (1).png" alt="3">
+                            <img src="./icons/Rectangle (1).png" alt="3">
                         </div>
                         <div>
                             <div class="blu">Комфортное, прозрачное и простое подключение</div>
@@ -123,7 +123,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle (2).png" alt="4">
+                            <img src="./icons/Rectangle (2).png" alt="4">
                         </div>
                         <div>
                             <div class="blu">Круглосуточная поддержка</div>
@@ -136,7 +136,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle (3).png" alt="5">
+                            <img src="./icons/Rectangle (3).png" alt="5">
                         </div>
                         <div>
                             <div class="blu">Комиссия 8% + БОНУСЫ</div>
@@ -150,7 +150,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle (4).png" alt="6">
+                            <img src="./icons/Rectangle (4).png" alt="6">
                         </div>
                         <div>
                             <div class="blu">Работа в удобное время, никаких графиков</div>
@@ -164,7 +164,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle (5).png" alt="7">
+                            <img src="./icons/Rectangle (5).png" alt="7">
                         </div>
                         <div>
                             <div class="blu">Всегда большое количество заказов</div>
@@ -178,7 +178,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="icons">
-                            <img src="../src/icons/Rectangle (6).png" alt="8">
+                            <img src="./icons/Rectangle (6).png" alt="8">
                         </div>
                         <div>
                             <div class="blu">Без шашечек и наклеек</div>
